--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
        Contact Me
       </h2>
      </header>
-     <form action="javascript:successForm()" method="post" name="contact" netlify>
+     <form method="post" name="contact" data-netlify="true">
       <div>
        <div class="row">
         <div class="col-6 col-12-medium">
