--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
        Contact Me
       </h2>
      </header>
-     <form name="contact" action="https://formspree.io/contact@haideralipunjabi.com" method="POST">
+     <form name="contact" netlify method="POST">
       <div>
        <div class="row">
         <div class="col-6 col-12-medium">
