--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
        Contact Me
       </h2>
      </header>
-     <form name="contact" netlify method="POST">
+     <form name="contact" method="POST" action="https://www.briskforms.com/go/0b72df87aabe2cb86a1b4cd19bb3b020">
       <div>
        <div class="row">
         <div class="col-6 col-12-medium">
