--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
               <div class="col-12">
                 <textarea id="form_message" name="message" placeholder="Message" rows="6"></textarea>
               </div>
-              <span class="col-3 success" id="successMessage" onclick="javascript:$(this).hide();" style="display:none;">Message Sent</span>
+              <span class="col-3 col-12-medium success" id="successMessage" onclick="javascript:$(this).hide();" style="display:none;">Message Sent</span>
               <div class="col-12">
                 <input id="submitButton" type="submit" value="Send Message" />
               </div>
