--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
           Photography
         </span>
       </a>
+      <a class="icon fa-monitor" href="#uses">
+        <span>
+          Uses
+        </span>
+      </a>
       <a class="icon fa-envelope" href="#contact">
         <span>
           Contact
@@ -907,6 +912,9 @@
             </div>
           </div>
         </section>
+      </article>
+      <article class="panel" id="uses">
+        <script src="https://gist.github.com/haideralipunjabi/da789c1881b391f707e4fa01933cd5da.js"></script>
       </article>
       <!-- Contact -->
       <article class="panel" id="contact">
