--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
       Projects
      </span>
     </a>
-    <a class="icon fa-camera" href="#photography">
+    <!-- <a class="icon fa-camera" href="#photography">
      <span>
       Photography
      </span>
-    </a>
+    </a> -->
     <a class="icon fa-desktop" href="#uses">
      <span>
       Uses
@@ -108,7 +108,7 @@
      <script src="https://gist.github.com/haideralipunjabi/5ad22e0cc574862a357eba0f74b7ea0c.js">
      </script>
     </article>
-    <article class="panel" id="photography">
+    <!-- <article class="panel" id="photography">
      <header>
       <h2>
        Photography
@@ -648,7 +648,7 @@
        </div>
       </div>
      </section>
-    </article>
+    </article> -->
     <article class="panel" id="projects">
      <header>
       <h2>
