--- a/index.html
+++ b/index.html
@@ -698,6 +698,11 @@
          <img alt="DBS Scouter Font" src="/assets/media/projects/dbsscouterfont.png"/>
         </a>
        </div>
+       <div class="col-3 col-6-medium col-12-small">
+        <a class="image fit" href="https://hpffrec.hackesta.org/">
+         <img alt="HPFanfiction Recommender" src="/assets/media/projects/hpffrec.png"/>
+        </a>
+       </div>
       </div>
      </section>
     </article>
