Added new projects

--- a/index.html
+++ b/index.html
@@ -168,6 +168,11 @@
          <img alt="Covid-19 Kashmir Tracker" src="/assets/media/projects/covidkashmir.png"/>
         </a>
        </div>
+       <div class="col-3 col-6-medium col-12-small">
+        <a class="image fit" href="https://iftarkar.com/">
+         <img alt="Ramadan Iftar/Sahar Timings for Kashmir" src="/assets/media/projects/iftarkar.svg"/>
+        </a>
+       </div>
       </div>
      </section>
     </article>
