--- a/index.html
+++ b/index.html
@@ -216,6 +216,8 @@
    </div>
    <!-- Footer -->
    <div id="footer">
+    <a href="https://www.patreon.com/bePatron?u=35249787" data-patreon-widget-type="become-patron-button">Become a Patron!</a><script async src="https://c6.patreon.com/becomePatronButton.bundle.js"></script>
+
     <ul class="copyright">
      <li>
       © Hackesta 2019
