--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
      </a>
     </article>
     <article class="panel markdown" id="resume">
-     <script src="https://gist.github.com/haideralipunjabi/5ad22e0cc574862a357eba0f74b7ea0c.js">
+     <script src="http://gist-it.appspot.com/https://github.com/haideralipunjabi/haideralipunjabi/blob/master/README.md">
      </script>
     </article>
 
