--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
      </a>
     </article>
     <article class="panel markdown" id="resume">
-     <script src="http://gist-it.appspot.com/https://github.com/haideralipunjabi/haideralipunjabi/blob/master/README.md">
+     <script src="https://gist-it.appspot.com/https://github.com/haideralipunjabi/haideralipunjabi/blob/master/README.md">
      </script>
     </article>
 
